FE V4: show columns + full Object Page - Add srv/fe-annotations.cds: HeaderInfo, SelectionFields, LineItem, Facets, FieldGroups - Child tables: Email/Document/Task LineItem - CUD: Insert/Update/Delete Capabilities; ValueList for policy/vehicle - Service: Claim draft-enabled; project on kfz.Claim - Manifest: initialVisibleFields, table creationMode - Fix labels for FieldGroups + titles

--- a/app/claims/webapp/manifest.json
+++ b/app/claims/webapp/manifest.json
@@ -113,7 +113,10 @@
               "controlConfiguration": {
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
-                    "type": "ResponsiveTable"
+                    "type": "ResponsiveTable",
+                    "creationMode": { "name": "NewPage" },
+                    "personalization": { "column": true, "sort": true, "filter": true },
+                    "initialVisibleFields": "claimNumber,policy.policyNumber,vehicle.plate,lossDate,status,severity,reportedDate"
                   }
                 }
               }
