fix(ui): load chat CSS via manifest; avoid double-escaping HTML in chat renderer

--- a/app/claims/webapp/manifest.json
+++ b/app/claims/webapp/manifest.json
@@ -79,7 +79,7 @@
       }
     },
     "resources": {
-      "css": []
+      "css": [ { "uri": "css/chat.css" } ]
     },
     "routing": {
       "config": {},
