feat(agent): add MCP-enabled Agent SSE endpoint and UI switch\n\n- New endpoint /ai/agent/stream with streaming + tool events\n- MCP client (Stdio) + CLI fallback\n- In-memory thread memory via threadId\n- UI now posts to /ai/agent/stream and sends threadId\n- Added @modelcontextprotocol/sdk ^1.17.5\n- Added scripts/test-sse.ps1 helper\n\nPoC: full tool access, no policies

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@sap-ai-sdk/langchain": "^1.14.0",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@sap-cloud-sdk/connectivity": "^3",
     "@sap-cloud-sdk/http-client": "^3",
     "@sap-cloud-sdk/resilience": "^3",
